src/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

:root {
  --body-background: #dcdcdc;
  --sidebar-background: #fffafa;
  --name-container-color: #cffafe;
}

html,
body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  width: 100%;
  height: 100%;
}

body {
  width: 100%;
  height: 100%;
  background-color: var(--body-background);
}

.src {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 4fr;
}

.sidebar {
  display: grid;
  grid-template-rows: repeat(4, 1fr) 5fr;
  background-color: var(--sidebar-background);
}

.sidebar > * {
  align-self: center;
  justify-self: center;
}

.side-name-container {
  width: 100%;
  align-self: normal;
  background-color: var(--name-container-color);
  display: flex;
  justify-content: center;
  align-items: center;
}

.side-name-container:hover {
  border-bottom: 3px solid black;
  border-right: 3px solid black;
}

.side-name {
  cursor: pointer;
}

.side-name:hover {
  font-size: 20px;
}

.main-container {
  display: grid;
  grid-template: 1fr 10fr / 1fr 4fr 1fr;
}

.main-middle {
  grid-area: 2 / 2 / 3 / 3;
}

.control-folder {
  align-self: normal;
  width: 100%;
  border-top: 2px solid black;
  border-bottom: 2px solid black;
  display: flex;
  align-items: center;
  justify-content: space-around;
  background-color: var(--body-background);
}

.add-folder {
  cursor: pointer;
  border: 2px solid black;
  background-color: greenyellow;
  width: 60%;
  height: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.bar-add {
  display: grid;
  width: 100%;
  height: 100%;
  grid-template-rows: repeat(10, 1fr);
}

.bar-add * {
  align-self: center;
  justify-self: center;
}

.container-name {
  width: 50%;
  display: flex;
  justify-content: space-around;
}

.menu-folder {
  display: grid;
  grid-template-rows: 1fr 1fr;
}

.warn-folder {
  font-size: 10px;
  justify-self: center;
  color: #900;
  font-weight: bold;
  border-radius: 0 0 5px 5px;
  box-sizing: border-box;
}

.input-menu {
  justify-self: center;
  align-self: center;
  width: 100%;
}

.input-container {
  width: 100%;
  height: 100%;
  display: grid;
}

.control-container {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: space-around;
}

.add-menu {
  width: 30px;
  height: 30px;
  cursor: pointer;
  background-color: greenyellow;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50px;
  border: 2px solid black;
}

.cancel-menu {
  width: 30px;
  height: 30px;
  cursor: pointer;
  background-color: red;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50px;
  border: 2px solid black;
}

.cancel-menu > svg,
.add-menu > svg {
  width: 50%;
  height: 50%;
}

.container-name {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.delete-name {
  display: flex;
  justify-content: center;
  align-items: center;
}

.delete-name > svg {
  filter: invert(12%) sepia(97%) saturate(6040%) hue-rotate(1deg)
    brightness(93%) contrast(119%);
  width: 20px;
  height: 20px;
}

/* M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z
M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>close</title><path d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" /></svg> */

